apps/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hailcast-frontend
  namespace: hailcast
spec:
  selector:
    app: hailcast-frontend
  ports:
    - port: 80
      targetPort: 80
      name: http
